# craft_demo

./: README.md
cpp/: CMakeLists.txt  userinfo_server.cc
java/: build.gradle
java/src/main/java/com/example/demo/config/: AppConfiguration.java
java/src/main/java/com/example/demo/restservice/: UserInfo.java  UserInfoController.java
java/src/main/proto/: userinfo.proto
sample_data/: sample_request.http
